feat: Add login navigation links to make designation selection accessible
Changes:
- Added 🔐 Login link to main navigation menu
- Updated main CTA button to direct to login page
- Added login shortcut in footer
- Login page now easily discoverable from landing page

User Flow:
1. User visits index.html (landing page)
2. Clicks 'Login with Designation' button
3. Selects their role/designation
4. Redirected to appropriate feature page

Designations available on login:
- 👤 Patient/User
- 💻 Software Engineer
- 🤖 AI Engineer
- 📊 Data Scientist
- 🏥 Mental Health Administrator
- 🚨 Emergency Contact Team
- 🔒 Security Analyst
- 💰 Financial Team
- ⚙️ System Administrator

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./feature4.html">⭐ Feedback</a></li>
         <li><a href="./feature5.html">🤖 AI Analysis</a></li>
         <li><a href="./feature6.html">👤 Profiles</a></li>
+        <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
       </ul>
       <div class="nav-actions">
         <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
@@ -42,7 +43,7 @@
       <h1>Your Mental Health, Our Priority</h1>
       <p>AI-powered monitoring and support system for better mental well-being</p>
       <div class="cta-buttons">
-        <a href="./feature1.html" class="btn btn-primary">Get Started</a>
+        <a href="./login.html" class="btn btn-primary">🔐 Login with Designation</a>
         <button class="btn btn-secondary"
           onclick="document.querySelector('.features').scrollIntoView({behavior: 'smooth'})">Learn More</button>
       </div>
@@ -154,7 +155,7 @@
             <li><a href="./index.html">Dashboard</a></li>
             <li><a href="./feature1.html">Mood Logging</a></li>
             <li><a href="./feature2.html">Counsellors</a></li>
-            <li><a href="./feature6.html">Emergency Support</a></li>
+            <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
           </ul>
         </div>
         <div class="footer-section">
