feat: Complete Mental Health Monitoring System with 9 designations, 20 patient data, interactive dashboards & charts

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <a href="./index.html" class="nav-logo">🧠 Hermony AI</a>
       <ul class="nav-menu">
         <li><a href="./index.html" class="active">🏠 Dashboard</a></li>
-        <li><a href="./feature1.html">📋 Mood Logging</a></li>
-        <li><a href="./feature2.html">👨‍⚕️ Counsellors</a></li>
-        <li><a href="./feature3.html">🧘 Recommendations</a></li>
-        <li><a href="./feature4.html">⭐ Feedback</a></li>
-        <li><a href="./feature5.html">🤖 AI Analysis</a></li>
-        <li><a href="./feature6.html">👤 Profiles</a></li>
+        <li><a href="./feature-daily-logs.html">📝 Daily Logs</a></li>
+        <li><a href="./feature-ai-analysis.html">🤖 AI Analysis</a></li>
+        <li><a href="./feature-recommendations.html">💡 Recommendations</a></li>
+        <li><a href="./feature-sessions.html">👨‍⚕️ Sessions</a></li>
+        <li><a href="./feature-progress.html">📈 Progress</a></li>
+        <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
         <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
       </ul>
       <div class="nav-actions">
@@ -55,32 +55,32 @@
     <div class="container-lg">
       <h2 class="section-title">Comprehensive Mental Health Support</h2>
       <div class="features-grid">
-        <a href="./feature1.html" class="feature-card">
+        <a href="./feature-daily-logs.html" class="feature-card">
           <div class="feature-icon">📝</div>
           <h3>Daily Mood Logging</h3>
           <p>Track your mood, stress levels, and sleep patterns daily to build a comprehensive behavioral history.</p>
         </a>
-        <a href="./feature2.html" class="feature-card">
+        <a href="./feature-sessions.html" class="feature-card">
           <div class="feature-icon">👨‍⚕️</div>
           <h3>Counselor Management</h3>
           <p>Connect with licensed counselors for professional therapy sessions and ongoing support.</p>
         </a>
-        <a href="./feature5.html" class="feature-card">
+        <a href="./feature-progress.html" class="feature-card">
           <div class="feature-icon">📈</div>
           <h3>Progress Tracking</h3>
           <p>Monitor your improvement over time with detailed feedback and progress metrics.</p>
         </a>
-        <a href="./feature6.html" class="feature-card">
+        <a href="./feature-crisis.html" class="feature-card">
           <div class="feature-icon">🚨</div>
           <h3>Crisis Detection</h3>
           <p>AI-powered emergency detection system that provides immediate support when you need it most.</p>
         </a>
-        <a href="./feature3.html" class="feature-card">
+        <a href="./feature-recommendations.html" class="feature-card">
           <div class="feature-icon">💡</div>
           <h3>Personalized Recommendations</h3>
           <p>Get tailored wellness suggestions including meditation, sleep hygiene, and stress reduction activities.</p>
         </a>
-        <a href="./feature4.html" class="feature-card">
+        <a href="./feature-ai-analysis.html" class="feature-card">
           <div class="feature-icon">🤖</div>
           <h3>AI Mood Analysis</h3>
           <p>Advanced NLP algorithms analyze your journal entries to detect early signs of anxiety or depression.</p>
@@ -153,8 +153,8 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="./index.html">Dashboard</a></li>
-            <li><a href="./feature1.html">Mood Logging</a></li>
-            <li><a href="./feature2.html">Counsellors</a></li>
+            <li><a href="./feature-daily-logs.html">Mood Logging</a></li>
+            <li><a href="./feature-sessions.html">Counsellors</a></li>
             <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
           </ul>
         </div>
