--- a/login.html
+++ b/login.html
@@ -226,15 +226,15 @@
           <label for="designation">Designation</label>
           <select id="designation" required>
             <option value="">-- Select Designation --</option>
-            <option value="./index.html">👤 Patient/User</option>
-            <option value="./feature1.html">💻 Software Engineer</option>
-            <option value="./feature2.html">🤖 AI Engineer</option>
-            <option value="./feature3.html">📊 Data Scientist</option>
-            <option value="./feature4.html">🏥 Mental Health Administrator</option>
-            <option value="./feature5.html">🚨 Emergency Contact Team</option>
-            <option value="./feature6.html">🔒 Security Analyst</option>
-            <option value="./feature1.html">💰 Financial Team</option>
-            <option value="./feature2.html">⚙️ System Administrator</option>
+            <option value="./dashboard.html">👤 Patient/User</option>
+            <option value="./dashboard.html">💻 Software Engineer</option>
+            <option value="./dashboard.html">🤖 AI Engineer</option>
+            <option value="./dashboard.html">📊 Data Scientist</option>
+            <option value="./dashboard.html">🏥 Mental Health Administrator</option>
+            <option value="./dashboard.html">🚨 Emergency Contact Team</option>
+            <option value="./dashboard.html">🔒 Security Analyst</option>
+            <option value="./dashboard.html">💰 Financial Team</option>
+            <option value="./dashboard.html">⚙️ System Administrator</option>
           </select>
         </div>
 
