--- a/feature-daily-logs.html
+++ b/feature-daily-logs.html
@@ -93,7 +93,8 @@
         <!-- Feature Header -->
         <div class="feature-header">
             <h1 style="margin: 0; font-size: 2rem;">📝 Daily Mood & Stress Logging</h1>
-            <p style="margin: 0.5rem 0 0 0; opacity: 0.9; font-size: 1rem;">Track your daily mood, stress levels, and sleep patterns</p>
+            <p style="margin: 0.5rem 0 0 0; opacity: 0.9; font-size: 1rem;">Track your daily mood, stress levels, and
+                sleep patterns</p>
         </div>
 
         <!-- Add New Log Form -->
@@ -129,12 +130,14 @@
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="sleepHours" class="form-label">Sleep Hours</label>
-                        <input type="number" class="form-control" id="sleepHours" min="0" max="12" step="0.5" value="7" required>
+                        <input type="number" class="form-control" id="sleepHours" min="0" max="12" step="0.5" value="7"
+                            required>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="notes" class="form-label">Notes / Thoughts</label>
-                    <textarea class="form-control" id="notes" rows="3" placeholder="How are you feeling today?"></textarea>
+                    <textarea class="form-control" id="notes" rows="3"
+                        placeholder="How are you feeling today?"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">📝 Save Entry</button>
             </form>
