--- a/feature-recommendations.html
+++ b/feature-recommendations.html
@@ -8,14 +8,55 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
     <style>
-        .feature-header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 12px; margin-bottom: 2rem; }
-        .rec-card { background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); margin-bottom: 1.5rem; }
-        .category-badge { display: inline-block; padding: 0.3rem 0.8rem; border-radius: 15px; font-size: 0.8rem; font-weight: 600; margin-bottom: 0.5rem; }
-        .cat-mindfulness { background: #667eea; color: white; }
-        .cat-exercise { background: #f093fb; color: white; }
-        .cat-social { background: #4facfe; color: white; }
-        .cat-sleep { background: #43e97b; color: white; }
-        .cat-nutrition { background: #fa709a; color: white; }
+        .feature-header {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 2rem;
+            border-radius: 12px;
+            margin-bottom: 2rem;
+        }
+
+        .rec-card {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 1.5rem;
+        }
+
+        .category-badge {
+            display: inline-block;
+            padding: 0.3rem 0.8rem;
+            border-radius: 15px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+        }
+
+        .cat-mindfulness {
+            background: #667eea;
+            color: white;
+        }
+
+        .cat-exercise {
+            background: #f093fb;
+            color: white;
+        }
+
+        .cat-social {
+            background: #4facfe;
+            color: white;
+        }
+
+        .cat-sleep {
+            background: #43e97b;
+            color: white;
+        }
+
+        .cat-nutrition {
+            background: #fa709a;
+            color: white;
+        }
     </style>
 </head>
 
@@ -43,11 +84,13 @@
     <div class="main-content">
         <div class="feature-header">
             <h1 style="margin: 0; font-size: 2rem;">💡 Personalized Wellness Recommendations</h1>
-            <p style="margin: 0.5rem 0 0 0; opacity: 0.9;">Tailored activities and practices to improve your mental well-being</p>
+            <p style="margin: 0.5rem 0 0 0; opacity: 0.9;">Tailored activities and practices to improve your mental
+                well-being</p>
         </div>
 
         <!-- Recommendations Grid -->
-        <div id="recommendationsGrid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 1.5rem;"></div>
+        <div id="recommendationsGrid"
+            style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 1.5rem;"></div>
     </div>
 
     <!-- Scripts -->
