style: make dashboard header subheading text white and fully opaque

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,15 @@
             box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
         }
 
+        .dashboard-header h1 {
+            color: white;
+        }
+
+        .dashboard-header p {
+            color: white !important;
+            opacity: 1;
+        }
+
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
