feat: Add comprehensive login system with theme toggle and role-based redirects
- Implement individual login page as entry point (index.html redirects to login.html)
- Add login form with Full Name, Email, Password fields
- Add email format validation
- Implement designation-based role selection (9 roles)
- Create role-based dashboard redirects
- Add comprehensive light/dark theme toggle with localStorage persistence
- Ensure full visibility of all UI elements in both modes
- Add theme.js for theme management
- Add login.js for form validation and role handling
- Update theme.css with dark mode variables and styling
- All text, labels, and UI elements visible in both light and dark modes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=login.html">
   <title>Hermony - AI Mental Health Monitoring System</title>
   <link rel="stylesheet" href="assets/css/theme.css">
 </head>
@@ -24,6 +25,7 @@
         <li><a href="./login.html" style="color: #667eea; font-weight: bold;">🔐 Login</a></li>
       </ul>
       <div class="nav-actions">
+        <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
         <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
           <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
             focusable="false">
@@ -42,7 +44,6 @@
       <h1>Your Mental Health, Our Priority</h1>
       <p>AI-powered monitoring and support system for better mental well-being</p>
       <div class="cta-buttons">
-        <a href="./login.html" class="btn btn-primary">🔐 Login with Designation</a>
         <button class="btn btn-secondary"
           onclick="document.querySelector('.features').scrollIntoView({behavior: 'smooth'})">Learn More</button>
       </div>
