--- a/login.html
+++ b/login.html
@@ -14,6 +14,36 @@
       min-height: 100vh;
       padding: 1rem;
       background: var(--bg-primary);
+      position: relative;
+    }
+
+    .theme-toggle {
+      position: fixed;
+      top: 1.5rem;
+      right: 1.5rem;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: var(--bg-secondary);
+      border: 1px solid var(--border-color);
+      color: var(--text-primary);
+      cursor: pointer;
+      font-size: 1.2rem;
+      transition: all 0.3s ease;
+      z-index: 100;
+    }
+
+    .theme-toggle:hover {
+      background: var(--bg-tertiary);
+      border-color: var(--primary-color);
+      color: var(--primary-color);
+    }
+
+    .theme-toggle:active {
+      transform: scale(0.95);
     }
 
     .login-container {
@@ -66,6 +96,7 @@
       color: var(--text-primary);
     }
 
+    .form-group-login input,
     .form-group-login select {
       width: 100%;
       padding: 0.75rem;
@@ -75,8 +106,15 @@
       background: var(--bg-primary);
       color: var(--text-primary);
       transition: all 0.3s ease;
+      box-sizing: border-box;
     }
 
+    .form-group-login input::placeholder {
+      color: var(--text-tertiary);
+      opacity: 1;
+    }
+
+    .form-group-login input:focus,
     .form-group-login select:focus {
       outline: none;
       border-color: var(--primary-color);
@@ -178,6 +216,7 @@
 </head>
 
 <body>
+  <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
   <div class="login-container">
     <div class="login-card">
       <div class="login-header">
@@ -190,18 +229,33 @@
 
       <form id="loginForm">
         <div class="form-group-login">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" placeholder="Enter your full name" required />
+        </div>
+
+        <div class="form-group-login">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your email address" required />
+        </div>
+
+        <div class="form-group-login">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter your password" required />
+        </div>
+
+        <div class="form-group-login">
           <label for="designation">Designation</label>
           <select id="designation" required>
             <option value="">-- Select Designation --</option>
-            <option value="./dashboard.html">👤 Patient/User</option>
-            <option value="./dashboard.html">💻 Software Engineer</option>
-            <option value="./dashboard.html">🤖 AI Engineer</option>
-            <option value="./dashboard.html">📊 Data Scientist</option>
-            <option value="./dashboard.html">🏥 Mental Health Administrator</option>
-            <option value="./dashboard.html">🚨 Emergency Contact Team</option>
-            <option value="./dashboard.html">🔒 Security Analyst</option>
-            <option value="./dashboard.html">💰 Financial Team</option>
-            <option value="./dashboard.html">⚙️ System Administrator</option>
+            <option value="patient">👤 Patient/User</option>
+            <option value="software_engineer">💻 Software Engineer</option>
+            <option value="ai_engineer">🤖 AI Engineer</option>
+            <option value="data_scientist">📊 Data Scientist</option>
+            <option value="mental_health_admin">🏥 Mental Health Administrator</option>
+            <option value="emergency_team">🚨 Emergency Contact Team</option>
+            <option value="security_analyst">🔒 Security Analyst</option>
+            <option value="financial_team">💰 Financial Team</option>
+            <option value="system_admin">⚙️ System Administrator</option>
           </select>
         </div>
 
@@ -211,44 +265,7 @@
   </div>
 
   <script src="assets/js/theme.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const form = document.getElementById('loginForm');
-      const sel = document.getElementById('designation');
-      if (!form || !sel) return console.error('login elements missing');
-
-      form.addEventListener('submit', function (e) {
-        e.preventDefault();
-        const designation = sel.value && sel.value.trim();
-        if (!designation) { alert('Please select a designation.'); return; }
-
-        // Store user role based on designation
-        const designationText = sel.options[sel.selectedIndex].text.toLowerCase();
-        let selectedRole = 'patient';
-
-        if (designationText.includes('software engineer')) selectedRole = 'software_engineer';
-        else if (designationText.includes('ai engineer')) selectedRole = 'ai_engineer';
-        else if (designationText.includes('data scientist')) selectedRole = 'data_scientist';
-        else if (designationText.includes('mental health')) selectedRole = 'mental_health_admin';
-        else if (designationText.includes('emergency')) selectedRole = 'emergency_team';
-        else if (designationText.includes('security')) selectedRole = 'security_analyst';
-        else if (designationText.includes('financial')) selectedRole = 'financial_team';
-        else if (designationText.includes('system')) selectedRole = 'system_admin';
-
-        localStorage.setItem('userRole', selectedRole);
-        localStorage.setItem('designation', sel.options[sel.selectedIndex].text);
-
-        const btn = form.querySelector('button[type="submit"]');
-        if (btn) {
-          btn.disabled = true;
-          btn.innerHTML = '⏳ Loading...';
-        }
-
-        console.log('Redirecting to:', designation, 'as role:', selectedRole);
-        window.location.href = designation;
-      });
-    });
-  </script>
+  <script src="assets/js/login.js"></script>
 </body>
 
 </html>
