Fix: improve contrast on feature/crisis cards, remove storing plaintext password, branding fixes, JS guards

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; url=login.html">
-  <title>Hermony - AI Mental Health Monitoring System</title>
+  <title>Harmony AI - AI Mental Health Monitoring System</title>
   <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 
@@ -13,7 +12,7 @@
   <!-- Top Navigation -->
   <nav class="top-navbar">
     <div class="nav-container">
-      <a href="./index.html" class="nav-logo">🧠 Hermony AI</a>
+      <a href="./index.html" class="nav-logo">🧠 Harmony AI</a>
       <ul class="nav-menu">
         <li><a href="./index.html" class="active">🏠 Dashboard</a></li>
         <li><a href="./feature-daily-logs.html">📝 Daily Logs</a></li>
@@ -136,7 +135,7 @@
             <p>Crisis Text Line: Text HOME to 741741</p>
           </div>
         </div>
-        <a href="./feature6.html" class="btn btn-danger mt-4">🚨 Get Immediate Help</a>
+        <a href="./feature-crisis.html" class="btn btn-danger mt-4">🚨 Get Immediate Help</a>
       </div>
     </div>
   </section>
@@ -146,7 +145,7 @@
     <div class="container-lg">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>🧠 Hermony AI</h3>
+          <h3>🧠 Harmony AI</h3>
           <p>Empowering better mental health through AI-powered monitoring and support.</p>
         </div>
         <div class="footer-section">
@@ -178,7 +177,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Hermony AI. All rights reserved. | Confidential & HIPAA Compliant</p>
+        <p>&copy; 2025 Harmony AI. All rights reserved. | Confidential & HIPAA Compliant</p>
       </div>
     </div>
   </footer>
@@ -219,7 +218,6 @@
     });
   </script>
 
-  <script src="assets/js/main.js"></script>
   <script src="assets/js/theme.js"></script>
 </body>
 
