--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Hermony AI</title>
+  <title>Login - Harmony AI</title>
   <link rel="stylesheet" href="assets/css/theme.css">
   <style>
     body {
@@ -222,7 +222,7 @@
       <div class="login-header">
         <div class="login-logo">🧠</div>
         <div>
-          <h1>Hermony AI</h1>
+          <h1>Harmony AI</h1>
           <p>Select designation and continue</p>
         </div>
       </div>
